[package]
name = "c_mpt_lib"
version = "0.0.1"
edition = "2021"
description = "a function c-style libaray for modern portfolio theroy"
authors = ["rocky li <124215304@qq.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
