[package]
name = "mpt_lib"
version = "0.0.2"
edition = "2021"
description = "a function libaray for modern portfolio theroy"
authors = ["rocky li <124215304@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rockyliyang/mpt_libs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.9"
libmath = "0.2.1"
chrono = "0.4.23"
float-cmp = "0.9.0"
[lib]
name="mpt_lib"